<resources>
    <string name="app_name">My Budget</string>
    <string name="add">Add</string>
    <string name="addTransaction">Add Transaction</string>
    <string name="transactionType">Transaction Type</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="transactionAmount">Amount</string>
    <string name="description">Description</string>
    <string name="balance">Balance</string>
    <string name="transactionTypeError">Need a transaction type.</string>
    <string name="descriptionError">Need a description.</string>
    <string name="amountError">Need a amount.</string>
    <string name="question_delete_transaction">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="empty_transaction_list">You don\'t have transactions. \nClick + to add one :)</string>
    <string-array name="listTransactionType">
        <item>@string/income</item>
        <item>@string/expenses</item>
    </string-array>
</resources>